// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package nomad;

option go_package = "waypoint/builtin/nomad";

import "opaqueany/any.proto";

message Deployment {
  string id = 1;
  string name = 2;
  opaqueany.Any resource_state = 3;
}

// Resource contains the internal resource states.
message Resource {
  message Job {
    string name = 1;
  }
}

// This represents the state of the TaskLaunch implementation.
message TaskInfo {
  string id = 1;
}
